--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao&display=swap');
+
 html {
     box-sizing: border-box;
     background: #ffc600;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Liu Jian Mao Cao', cursive;
     font-size: 20px;
     font-weight: 200;
 }
@@ -59,22 +61,22 @@ html {
     justify-content: center;
 }
 
-.panel  > *:first-child { transform: translateY(-100%); }
+.panel > *:first-child { transform: translateY(-100%); }
 
 .panel.open-active > *:first-child { transform: translateY(0); }
 
-.panel  > *:last-child { transform: translateY(100%); }
+.panel > *:last-child { transform: translateY(100%); }
 
 .panel.open-active > *:last-child { transform: translateY(0); }
 
 .panel p {
     text-transform: uppercase;
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Liu Jian Mao Cao', cursive;
     text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
     font-size: 2em;
 }
   
-.panel p:nth-child(2) {
+.panel p:nth-child(2) { /*changes the size of the second child*/
     font-size: 4em;
 }
 
